--- a/css/style.css
+++ b/css/style.css
@@ -39,4 +39,6 @@ body {
 }
 	#bpane div { height: 88%; background-color: #fff; margin: 0 4px; border: 1px solid #aaa;
 	border-top: none; overflow: auto; }
-	#bpane div textarea { height: 99%; width: 99%; margin: 0; padding: 0; }
+	#bpane div p, #bpane div p a { padding: 0; margin: 0; color: #666; font-style: italic;
+	font-size: small; }
+	#bpane div textarea { position: relative; top: 10px; height: 95%; width: 99%; margin: 0; padding: 0; }
